--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,3 @@
-*{
-    margin: 0px;
-    padding: 0px;
-}
-
-video{
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    z-index: -1;
-    position: absolute;
-    position: fixed;
+body{
+    background-color: rgba(242,237,225,255);
 }
