--- a/src/pages/stylesheet/nav.css
+++ b/src/pages/stylesheet/nav.css
@@ -1,5 +1,5 @@
 .nav .sidenav p{
-    color: rgb(249, 51, 243);
+    color: black;
     margin-top: 90px;
     font-size: 60px;
     font-weight: bold;
@@ -22,6 +22,7 @@
 
 .sidenav p:hover{
     font-family: 'Londrina Solid', cursive;
+    color: red;
 }
 
 .sidenav{
