--- a/src/pages/stylesheet/about.css
+++ b/src/pages/stylesheet/about.css
@@ -1,4 +1,3 @@
-
 @font-face {
     font-family: harry;
     src: url(../stylesheet/fonts/harry.TTF);
@@ -16,10 +15,11 @@
 
 .name span{
     font-family: harry;
-    margin: 20px;
     font-size: 100px;
     color: black;
-    padding: 20px;
+    height: 50px;
+    width: 50px;
+    margin: 60px;
     font-weight: lighter;
 }
 
@@ -44,11 +44,15 @@
     font-family: 'Indie Flower', cursive;
     font-size: 30px;
     margin-left: 60px;
+    height: 50px;
+    width: 80%;
 }
 
 .skill p span{
     font-size: 30x;
     font-weight: lighter;
+    margin: 10px;
+    padding: 10px;
 }
 
 .skill p span:hover{
@@ -64,14 +68,19 @@
     font-size: 35px;
 }
 
-.github img{
-    height: 30px;
-    width: 30px;
-    margin: 10px;
+.logos{
+    margin-top: 40px;
+    margin-left: 50px;
 }
 
-.github img:hover{
-    background-color: red;
-    transition: 500ms;
+.logo img{
+    height: 60px;
+    width: 60px;
+    margin-right: 50px;
     border-radius: 500px;
+}
+
+.logo img:hover{
+    transition: 600ms;
+    box-shadow: 0px 0px  50px 15px red;
 }
