--- a/src/pages/stylesheet/about.css
+++ b/src/pages/stylesheet/about.css
@@ -81,10 +81,13 @@ body {
     width: 40px;
     margin-right: 50px;
     border-radius: 500px;
-    opacity: 0.6;
+    opacity: 0.8;
+    box-shadow: 0px 0px 100px black;
+    transition: 600ms;
 }
 
 .logo img:hover{
-    transition: 400ms;
+    transition: 600ms;
     opacity: 1;
+    box-shadow: 0px 0px 0px black;
 }
