--- a/src/pages/stylesheet/resume.css
+++ b/src/pages/stylesheet/resume.css
@@ -3,6 +3,11 @@
     src: url(../stylesheet/fonts/sketchy.ttf);
 }
 
+@font-face {
+    font-family: intro;
+    src: url(../stylesheet/fonts/bouncy2.otf);
+}
+
 *{
     margin: 0px;
 }
@@ -12,7 +17,7 @@
     margin-top: 200px;
     opacity: 0.2px;
     margin-left: 50px;
-    font-family: resume;
+    font-family: intro;
 }
 
 .resume h1{
