--- a/src/pages/stylesheet/projects.css
+++ b/src/pages/stylesheet/projects.css
@@ -18,7 +18,7 @@
     margin-top: 60px;
     margin-left: 30px;
     width: 65%;
-    background-color: red;
+    background-color: rgba(0, 0, 0, 0.7);
     padding: 20px;
 }
 
