--- a/src/pages/stylesheet/projects.css
+++ b/src/pages/stylesheet/projects.css
@@ -18,8 +18,16 @@
     margin-top: 60px;
     margin-left: 30px;
     width: 65%;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(159, 7, 7, 0.7);
+
     padding: 20px;
+    transition: 500ms;
+}
+
+.card-box:hover{
+    transition: 500ms;
+    background-color: rgba(0, 0, 0, 0.7);
+
 }
 
 .shopping-website-card img{
