--- a/src/pages/stylesheet/projects.css
+++ b/src/pages/stylesheet/projects.css
@@ -1,13 +1,18 @@
 /* body {
     overflow: scroll; // do it while making responsive (in MedialQuery)
 } */
-
 .card img{
-    height: 260px;
+    height: 240px;
     width: 300px;
-    margin-right: 30px;
-    margin-bottom: 30px;
+    padding: 20px;
+    transition: 600ms;
+    box-shadow: 0px 0px 20px black;
+    margin: 5px;
+    opacity: 0.7;
+}
 
+.card img:hover{
+    opacity: 1;
 }
 
 .card{
@@ -17,29 +22,28 @@
 .card-box{
     margin-top: 60px;
     margin-left: 30px;
-    width: 65%;
-    background-color: rgba(159, 7, 7, 0.7);
-
     padding: 20px;
-    transition: 500ms;
-}
-
-.card-box:hover{
-    transition: 500ms;
-    background-color: rgba(0, 0, 0, 0.7);
-
+    padding-right: 0px;
+    width: 72%;
 }
 
 .shopping-website-card img{
-    width: 460px;
-    height: 260px;
+    width: 465px;
 }
 
 .house-rental-card img{
-    width: 400px;
+    width: 465px;
 }
 
 .blender-card img{
-    width: 380px;
+    width: 280px;
+}
+
+.to-do-card img{
+    width: 30   0px;
+}
+
+.college-website-card img{
+    width: 300px;
 }
 
