--- a/src/pages/stylesheet/projects.css
+++ b/src/pages/stylesheet/projects.css
@@ -1,6 +1,6 @@
-/* body {
-    overflow: scroll; // do it while making responsive (in MedialQuery)
-} */
+body {
+    height: auto;
+}
 .card img{
     height: 240px;
     width: 300px;
@@ -24,7 +24,7 @@
     margin-left: 30px;
     padding: 20px;
     padding-right: 0px;
-    width: 72%;
+    width: 70%;
 }
 
 .shopping-website-card img{
@@ -47,3 +47,29 @@
     width: 300px;
 }
 
+@media only screen and (max-width: 1600px){
+    body {
+        overflow: scroll;
+    }
+    .card img{
+        height: 240px;
+        width: 300px;
+        padding: 20px;
+        transition: 600ms;
+        box-shadow: 0px 0px 20px black;
+        margin: 5px;
+    }
+}
+
+@media only screen and (max-width: 1300px){
+    body {
+        overflow: scroll;
+    }
+    .card-box{
+        width: 60%;
+    }
+    .card img{
+        height: 200px;
+        width: 300px;
+    }
+}
