--- a/src/pages/stylesheet/nav.css
+++ b/src/pages/stylesheet/nav.css
@@ -14,6 +14,7 @@ src: url(../stylesheet/fonts/comic_fill.ttf);
 }
 
 .nav .sidenav p{
+    transition: 600ms;
     color: black;
     margin-top: 90px;
     font-size: 30px;
@@ -28,7 +29,7 @@ src: url(../stylesheet/fonts/comic_fill.ttf);
 .nav{
     position: fixed;
     right: 5%;
-    top: 0%;
+    top: 10%;
 }
 
 .sidenav p:hover{
