--- a/src/pages/stylesheet/back.css
+++ b/src/pages/stylesheet/back.css
@@ -4,10 +4,11 @@
 }
 
 .spiderman{
+    opacity: 1;
     height: 100%;
     width: 100%;
     object-fit: cover;
     z-index: -1;
     position: fixed;
-    top: 0px;
+    top: 0%;
 }
