media query improved for mobile display

--- a/src/pages/stylesheet/nav.css
+++ b/src/pages/stylesheet/nav.css
@@ -64,7 +64,6 @@ src: url(../stylesheet/fonts/comic_fill.ttf);
 
 @media screen and (max-width: 1080px){
   .nav .sidenav p{
-    font-size: 20px;
     margin: 20px;
     font-size: 30px;
   }
@@ -75,5 +74,12 @@ src: url(../stylesheet/fonts/comic_fill.ttf);
     position: fixed;
     top: 5%;
     left: 40%;
+  }
+}
+
+@media screen and (min-width:320px){
+  .nav .sidenav p{
+    margin: 10px;
+    font-size: 15px;
   }
 }
