--- a/src/pages/stylesheet/about.css
+++ b/src/pages/stylesheet/about.css
@@ -101,7 +101,7 @@
 
 /* Media Query */
 
-@media screen and (max-width: 870px) {
+@media only screen and (max-width: 870px) {
     .name, .yashwant{
         font-size: 60px;
     }
@@ -132,7 +132,7 @@
 
 /* For Mobile */
 
-@media screen and (max-width: 1100px){
+@media only screen and (max-width: 1100px){
     body{
         width: 100%;
     }
@@ -170,3 +170,36 @@
         box-shadow: none;
     }
 }
+
+@media screen and (min-width:320px){
+    .about{
+        top: 10%;
+    }
+    .name{
+        font-size: 40px;
+    }
+    .yashwant{
+        font-size: 50px;
+    }
+    .name span:hover{
+        font-size: 50px;
+    }
+    .det{
+        font-size: 40px;
+        width: 100%;
+    }
+    .skill p span{
+        font-size: 15px;
+    }
+    .skill p{
+        font-size: 10px;
+    }
+    .skill p span:hover{
+        font-size: 20px;
+    }
+    .logo img{
+        height: 30px;
+        width: 30px;
+        margin: 50px;
+    }
+  }
