--- a/src/pages/stylesheet/resume.css
+++ b/src/pages/stylesheet/resume.css
@@ -53,17 +53,16 @@
     box-shadow: 15px 25px 20px black;
 }
 
-@media screen and (max-width: 1100px){
+@media(max-width: 800px){
     .resume{
-        position: fixed;
-        top: 25%;
-        padding: 50px;
+        top: 5%;
+        padding: 10px;
     }
     .resume h1{
-        font-size: 50px;
+        font-size: 20px;
     }
     .resume h1 span{
-        font-size: 100px;
+        font-size: 50px;
     }
 }
 
