--- a/src/pages/stylesheet/projects.css
+++ b/src/pages/stylesheet/projects.css
@@ -94,7 +94,7 @@ body {
         width: 800px;
     }
 }
-@media(max-width: 500px){
+@media(min-width: 320px){
     body {
         overflow: scroll;
     }
