--- a/src/pages/stylesheet/about.css
+++ b/src/pages/stylesheet/about.css
@@ -132,7 +132,7 @@
 
 /* For Mobile */
 
-@media screen and (max-width: 1100px){
+@media(min-width: 320px){
     .about{
         position: fixed;
         top: 10%;
@@ -155,22 +155,25 @@
         margin-left: 15px;
     }
     .skill p span{
-        font-size: 20px;
+        font-size: 17px;
         margin: 0px;
     }
     .skill p{
-        font-size: 15px;
+        font-size: 10px;
     }
     .skill{
         width: 100%;
-        margin-left: 15px;
+        margin-left: 10px;
     }
     .skill p span:hover{
-        font-size: 25px;
+        font-size: 20px;
     }
     .logo img{
-        height: 40px;
-        width: 40px;
-        margin: 50px;
+        height: 35px;
+        width: 35px;
+    }
+    .logos{
+        margin-top: 20px;
+        margin-left: 20px;
     }
 }
