--- a/src/pages/stylesheet/about.css
+++ b/src/pages/stylesheet/about.css
@@ -132,7 +132,7 @@
 
 /* For Mobile */
 
-@media(min-width: 320px){
+@media(max-width: 1100px){
     .about{
         position: fixed;
         top: 10%;
