--- a/src/pages/stylesheet/projects.css
+++ b/src/pages/stylesheet/projects.css
@@ -97,7 +97,7 @@ body {
 
 /* for mobile screen */
 
-@media(min-width: 320px){
+@media(max-width: 1100px){
     body {
         overflow: scroll;
     }
