--- a/src/stylesheet/projects.css
+++ b/src/stylesheet/projects.css
@@ -23,9 +23,9 @@ body {
 
 .proj-titles p{
     cursor: pointer;
-    font-size: 20px;
     font-family: comics;
     margin: 60px;
+    width: 270px;
 }
 
 .proj-des{
