Added description for all projects

--- a/src/stylesheet/projects.css
+++ b/src/stylesheet/projects.css
@@ -30,6 +30,7 @@ body {
 
 .proj-des{
     width: 40%;
+    height: 500px;
     box-shadow: 10px 10px 20px black;
     background-color: rgba(29, 8, 8, 0.832);
     padding: 30px;
@@ -48,7 +49,6 @@ body {
 }
 
 .proj-link{
-    margin-top: 20%;
     margin-left: 50px;
 }
   
