Added another project in the project section

--- a/src/stylesheet/projects.css
+++ b/src/stylesheet/projects.css
@@ -50,5 +50,16 @@ body {
 
 .proj-link{
     margin-left: 50px;
+    display: flex;
+}
+
+.proj-link a{
+    color: black;
+    transition: 700ms;
+}
+
+.proj-link a:hover{
+    transition: 700ms;
+    color: red;
 }
   
