--- a/src/stylesheet/back.css
+++ b/src/stylesheet/back.css
@@ -1,14 +1,28 @@
-*{
-    margin: 0px;
-    padding: 0px;
-}
-
-.spiderman{
-    opacity: 1;
-    /* height: 100%;
-    width: 100%; */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  body, html {
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden; /* Prevent horizontal scrolling */
+  }
+  
+  .spiderman {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     z-index: -1;
-    position: fixed;
-    top: 0%;
-}
+  }
+  
+  /* Responsive adjustments */
+  @media (max-width: 600px) {
+    .spiderman {
+      object-fit: cover;
+    }
+  }  
