--- a/src/stylesheet/skill.css
+++ b/src/stylesheet/skill.css
@@ -1,26 +1,88 @@
-.skills img{
-    height: 60px;
-    width: 60px;
-    margin: 20px;
-    transition: 600ms;
+/* Base styles */
+.skills img {
+  height: 60px;
+  width: 60px;
+  margin: 20px;
+  transition: 600ms;
 }
 
-.skills div{
-    display: flex;
-    justify-content: center;
-    font-size: 25px;
-    font-family: intro;
-    color: red;
+.skills div {
+  display: flex;
+  justify-content: center;
+  font-size: 25px;
+  font-family: intro;
+  color: red;
 }
 
-.skill_set p{
-    border-bottom: 2px black solid;
+.skill_set p {
+  border-bottom: 2px black solid;
 }
-.skill_set{
-    margin-top: 30px;
-    margin-bottom: 30px;
+
+.skill_set {
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
+
 .skills {
-    width: 40%;
+  width: 40%;
+  margin-left: 10%;
+}
+
+/* Responsive styles */
+@media (max-width: 1100px) {
+  .skills {
+    width: 60%;
+    margin-left: 20%;
+  }
+
+  .skills img {
+    height: 50px;
+    width: 50px;
+    margin: 10px;
+  }
+
+  .skills div {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 768px) {
+  .skills {
+    width: 80%;
     margin-left: 10%;
+  }
+
+  .skills img {
+    height: 40px;
+    width: 40px;
+    margin: 5px;
+  }
+
+  .skills div {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 480px) {
+  .skill_set {
+    margin-top: 200px;
+    margin-bottom: 20px;
+  }
+
+  .skills {
+    width: 100%;
+    margin-left: 0;
+    margin-bottom: 20px;
+    text-align: center;
+  }
+
+  .skills img {
+    height: 50px;
+    width: 50px;
+    margin: 5px;
+  }
+
+  .skills div {
+    font-size: 16px;
+  }
 }
